Global handler refactoring